[package]
name = "locologic"
version = "0.1.0"
edition = "2021"
authors = ["Fabius Mettner <fabius1705+locologic@live.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/juhu1705/locologic"
documentation = "https://juhu1705.github.io/locologic/doc/locologic"
description = """
A model railroad controlling system to handle autodriving.
"""

[features]
all = ["locodrive"]

[dependencies]
locodrive = { version = "0.1.2", features = ["all"], optional = true }
bytes = "1.2.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "sync"] }
petgraph = { version = "0.6.2", features = ["serde-1"] }
fixedbitset = "0.4.2"
async-recursion = "1.0.2"
async-trait = "0.1.68"
