[package]
name = "locologic"
version = "0.1.0"
edition = "2021"
authors = ["Fabius Mettner <fabius1705+locologic@live.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/juhu1705/locologic"
documentation = "https://juhu1705.github.io/locologic/doc/locologic"
description = """
A model railroad controlling system to handle autodriving.
"""

[features]
all = ["locodrive"]

[dependencies]
locodrive = { version = "0.1.2", features = ["all"], optional = true }
bytes = "1.7"
tokio = { version = "1.39", features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "macros",
  "sync",
  "time",
] }
tokio-test = "0.4"
petgraph = { version = "0.6", features = ["serde-1"] }
fixedbitset = "0.5"
async-recursion = "1.1"
async-trait = "0.1"
num-traits = "0.2"
